@@ -56,6 +56,7 @@ Changed
 - The `ui -> user-stylesheet` setting now also takes file paths relative to the config directory.
 - The `content -> cookies-accept` setting now has new `no-3rdparty` (default) and `no-unknown-3rdparty` values to block third-party cookies. The `default` value got renamed to `all`.
 - Improved startup time by reading the webpage history while qutebrowser is open.
+- The way `:spawn` splits its commandline has been changed slightly to allow commands with flags.
 
 Deprecated
 ~~~~~~~~~~
